--- a/test/fixtures/websites.yml
+++ b/test/fixtures/websites.yml
@@ -2,6 +2,7 @@ standout:
   domain: "standout.se"
   subdomain: "standout"
   email: "example@standout.se"
+  title: "Standout AB"
 
 website_without_releases:
   subdomain: "noreleases"
