--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,5 +1,3 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
   adapter: mysql2
   encoding: utf8
@@ -11,9 +9,11 @@ development:
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8
+  database: standoutcms_test
+  username: root
+  password:
 
 production:
   adapter: mysql2
