--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: ruby
+cache: bundler
 rvm:
   - 2.0.0
-before_script: bundle exec rake bootstrap
+before_script:
+  - bundle exec rake bootstrap
+  - bundle exec rake db:create
+  - bundle exec rake db:schema:load
+  - bundle exec rake db:migrate
+  - bundle exec rake db:test:prepare
