--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: ruby
+dist: trusty
+sudo: required
+services:
+  - mysql
 cache: bundler
 rvm:
-  - 2.2.6
+  - 2.3.1
+before_install:
+  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem install bundler -v '< 2'
 before_script:
   - bundle exec rake bootstrap
   - bundle exec rake db:create
